--- a/.github/workflows/master_mouhib.yml
+++ b/.github/workflows/master_mouhib.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy ASP.Net Core app to Azure Web App - mouhib
 
 on:
@@ -21,6 +18,11 @@ jobs:
         with:
           dotnet-version: '7.x'
           include-prerelease: true
+
+      - name: Use Node.js 16.x
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16.x'
 
       - name: Build with dotnet
         run: dotnet build WebApplication2 --configuration Release
