--- a/.github/workflows/master_mouhib.yml
+++ b/.github/workflows/master_mouhib.yml
@@ -25,7 +25,7 @@ jobs:
           node-version: '16.x'
 
       - name: Build with dotnet
-        run: dotnet build WebApplication2.csproj  --configuration Release
+        run: dotnet build ${{ github.workspace }}/WebApplication2.csproj --configuration Release
 
       - name: dotnet publish
         run: dotnet publish WebApplication2.csproj  -c Release -o ${{env.DOTNET_ROOT}}/myapp
