--- a/.github/workflows/master_mouhib.yml
+++ b/.github/workflows/master_mouhib.yml
@@ -8,11 +8,12 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest  
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
-
+      - name: Set working directory
+        run: cd ${{ github.workspace }}
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v1
         with:
@@ -25,10 +26,10 @@ jobs:
           node-version: '16.x'
 
       - name: Build with dotnet
-        run: dotnet build ${{ github.workspace }}/WebApplication2.csproj --configuration Release
+        run: dotnet build ${{ github.workspace }}/WebApplication2.csproj --configuration Release --no-restore --no-build
 
       - name: dotnet publish
-        run: dotnet publish WebApplication2.csproj  -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish ${{ github.workspace }}/WebApplication2.csproj  -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
@@ -37,7 +38,7 @@ jobs:
           path: ${{env.DOTNET_ROOT}}/myapp
 
   deploy:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     needs: build
     environment:
       name: 'Production'
