--- a/.github/workflows/master_mouhib.yml
+++ b/.github/workflows/master_mouhib.yml
@@ -26,7 +26,7 @@ jobs:
           node-version: '16.x'
 
       - name: Build with dotnet
-        run: dotnet build ${{ github.workspace }}/WebApplication2.csproj --configuration Release --no-restore --no-build
+        run: dotnet build ${{ github.workspace }}/WebApplication2.csproj --configuration Release --no-restore 
 
       - name: dotnet publish
         run: dotnet publish ${{ github.workspace }}/WebApplication2.csproj  -c Release -o ${{env.DOTNET_ROOT}}/myapp
