--- a/.github/workflows/master_mouhib.yml
+++ b/.github/workflows/master_mouhib.yml
@@ -11,9 +11,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
       - name: Set working directory
         run: cd ${{ github.workspace }}
+      - uses: actions/checkout@v2
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v1
         with:
@@ -26,7 +26,7 @@ jobs:
           node-version: '16.x'
 
       - name: Build with dotnet
-        run: dotnet build ${{ github.workspace }}/WebApplication2.csproj --configuration Release --no-restore 
+        run: dotnet build ${{ github.workspace }}/WebApplication2.csproj --configuration Release 
 
       - name: dotnet publish
         run: dotnet publish ${{ github.workspace }}/WebApplication2.csproj  -c Release -o ${{env.DOTNET_ROOT}}/myapp
