--- a/.github/workflows/master_mouhib.yml
+++ b/.github/workflows/master_mouhib.yml
@@ -14,22 +14,25 @@ jobs:
       - name: Set working directory
         run: cd ${{ github.workspace }}
       - uses: actions/checkout@v2
+
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '7.x'
-          include-prerelease: true
+          dotnet-version: '6.x'
 
       - name: Use Node.js 16.x
         uses: actions/setup-node@v2
         with:
           node-version: '16.x'
 
+      - name: Restore NuGet packages
+        run: dotnet restore WebApplication2.csproj
+
       - name: Build with dotnet
-        run: dotnet build ${{ github.workspace }}/WebApplication2.csproj --configuration Release 
+        run: dotnet build ${{ github.workspace }}/WebApplication2.csproj --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish ${{ github.workspace }}/WebApplication2.csproj  -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish ${{ github.workspace }}/WebApplication2.csproj -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
