--- a/.github/workflows/master_mouhib.yml
+++ b/.github/workflows/master_mouhib.yml
@@ -11,53 +11,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Set working directory
-        run: cd ${{ github.workspace }}
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '6.x'
-
-      - name: Use Node.js 16.x
-        uses: actions/setup-node@v2
-        with:
-          node-version: '16.x'
-
-      - name: Restore NuGet packages
+          dotnet-version: 7.0.x
+      - name: install dependencies 
         run: dotnet restore WebApplication2.csproj
-
       - name: Build with dotnet
-        run: dotnet build ${{ github.workspace }}/WebApplication2.csproj --configuration Release
+        run: dotnet build WebApplication2.csproj --configuration Release --no-restore
 
-      - name: dotnet publish
-        run: dotnet publish ${{ github.workspace }}/WebApplication2.csproj -c Release -o ${{env.DOTNET_ROOT}}/myapp
-
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v2
-        with:
-          name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v2
-        with:
-          name: .net-app
-
-      - name: Deploy to Azure Web App
-        id: deploy-to-webapp
-        uses: azure/webapps-deploy@v2
-        with:
-          app-name: 'mouhib'
-          slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_85D2405F441344729FE64D7117AEC9F4 }}
-          package: .
+      
