--- a/.github/workflows/master_mouhib-app.yml
+++ b/.github/workflows/master_mouhib-app.yml
@@ -19,13 +19,14 @@ jobs:
       - name: Setup NuGet
         uses: NuGet/setup-nuget@v1.0.5
 
-      - name: Restore dependencies
+      - name: Restore dependencies using nuget
         run: nuget restore WebApplication2.sln
 
-      - name: Build and publish
-        run:
-          msbuild WebApplication2.csproj /p:Configuration=Release /t:Rebuild
-          dotnet publish WebApplication2.csproj --configuration Release --output ./published
+      - name: Build with MSBuild
+        run: msbuild WebApplication2.csproj /p:Configuration=Release /t:Rebuild
+  
+      - name: Publish with dotnet
+        run: dotnet publish WebApplication2.csproj --configuration Release --output ./published
 
       - name: List files in published directory
         run: dir ./published
