--- a/WebApplication2.csproj
+++ b/WebApplication2.csproj
@@ -258,7 +258,7 @@
         <WebProjectProperties>
           <UseIIS>True</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>54843</DevelopmentServerPort>
+          <DevelopmentServerPort>54843</DevelopmentServerPort>s
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
           <IISUrl>https://localhost:44381/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
