--- a/.github/workflows/master_mouhib-app.yml
+++ b/.github/workflows/master_mouhib-app.yml
@@ -27,6 +27,9 @@ jobs:
 
     - name: Publish with dotnet
       run: dotnet publish WebApplication2.csproj --configuration Release --output ./published
+    - name: Ensure published directory exists
+      run: mkdir -p ./published
+ 
 
     - name: List files in published directory
       run: dir ./published
