--- a/.github/workflows/master_mouhib-app.yml
+++ b/.github/workflows/master_mouhib-app.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Deploy to Azure
       uses: azure/webapps-deploy@v2
       with:
-        app-name: 'mouhib-app-name'
+        app-name: 'mouhib-app'
         package: 'D:\home\site\wwwroot'
 
     - name: Publish with dotnet
