--- a/.github/workflows/master_mouhib-app.yml
+++ b/.github/workflows/master_mouhib-app.yml
@@ -27,13 +27,10 @@ jobs:
       run: nuget restore WebApplication2.sln
 
     - name: Publish application with dotnet
-      run: dotnet publish WebApplication2.csproj --configuration Release --output published
+      run: dotnet publish WebApplication2.csproj --configuration Release --output ./published
 
-    - name: List files in the workspace directory (for debugging)
+    - name: List files in the entire workspace (for debugging)
       run: dir 
-
-    - name: List files in published directory
-      run: dir "${{ github.workspace }}/published"
 
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
@@ -41,4 +38,4 @@ jobs:
         app-name: 'mouhib-app'
         slot-name: 'Production'
         publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_898C1390A5E340D8AA87C6C20E341BAB }}
-        package: "${{ github.workspace }}/published"
+        package: "./published"
